# ticket-reservation-system

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: workflow.yml
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
scripts/: entrypoint.sh
tickets/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
tickets/management/commands/: cleanup_reservations.py  (+1 more)
tickets/migrations/: 0001_initial.py  0002_view_user_tickets.py  0003_single_ticket_procedures.py  0004_tickets_functions.py  0005_correct_single_ticket_procedures.py  0006_correct_tickets_functions.py  0007_UUID_view_user_tickets.py  0008_update_view_tickets.py  0009_tickets_view_fix.py  0010_new_fix.py  0011_final_fix.py  0012_alter_ticket_unique_together.py  0013_alter_order_status_alter_ticket_status.py  0014_alter_orderdetails_participant.py  0015_rename_ticket_uuid_orderdetails_ticket_uuid_and_more.py  0016_remove_event_event_date_event_start_datetime_and_more.py  0017_alter_participant_pesel.py  0017_alter_ticket_options_and_more.py  0018_event_has_numbered_seats_event_need_pesel.py  0019_event_description_event_location_alter_ticket_row_and_more.py  0020_event_image_alter_event_start_datetime_and_more.py  0021_alter_orderdetails_order.py
tickets/services/: order_logic.py  stripe_service.py
tickets/templates/: base.html
tickets/tests/: conftest.py  test_services.py  test_views.py
tickets/utils/: pdf_generator.py
(+19 files in other folders)
