[tool.poetry]
name = "ticket-reservation-system"
version = "0.1.0"
description = ""
authors = ["mtrznadel24 <maciej.trznadel24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
