[tool.poetry]
name = "ticket-reservation-system"
version = "0.1.0"
description = ""
authors = ["mtrznadel24 <maciej.trznadel24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.11"
celery = "^5.6.2"
redis = "^7.2.1"
django-celery-beat = "^2.8.1"
reportlab = "^4.4.10"
qrcode = {extras = ["pil"], version = "^8.2"}
stripe = "^14.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
